# 2020_20310897

./: .gitignore  .travis.yml  Doxyfile  README.md  generateDocumentationAndDeploy.sh  hi_and_date.cmd  index.html
Worksheet2/: git-cheat-sheet.txt  last-commit.cmd
Worksheet3/: hello.cpp
Worksheet3/calc_msvc/dynamic_part/: calc_dym.exp  calc_dym.lib
Worksheet3/calc_msvc/static_part/: calc.exp  calc.lib  libmaths.lib
Worksheet3/calc_program/: calc.cpp
Worksheet4/: CMakeLists.txt  adder.h  calc.cpp
Worksheet4/calc_cmake/mingw_dynamic/: CMakeCache.txt  Makefile  cmake_install.cmake
Worksheet4/calc_cmake/mingw_static/: CMakeCache.txt  Makefile  cmake_install.cmake
Worksheet4/calc_cmake/msvc_static/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.sln  calc.vcxproj  calc.vcxproj.filters  cmake_install.cmake  maths.vcxproj  maths.vcxproj.filters
Worksheet4/hello_cmake/buildII/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters
Worksheet5/ex2/: CMakeLists.txt  edititemdialog.ui  mainwindow.ui
Worksheet5/hello_qt/: hello_qt.cpp
Worksheet5/hello_qt_cm/: CMakeLists.txt
Worksheet6/Exercise1/: CMakeLists.txt  vtk_cube.cpp
Worksheet6/Exercise2/: mainwindow.cpp
Worksheet6/Exercise3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/: CMakeLists.txt  calc.cpp  maths.h  test1.cpp
Worksheet8/: CMakeLists.txt  maths.cpp  maths.h
(+44 files in other folders)
